--- a/Knowledge/README.ME
+++ b/Knowledge/README.ME
@@ -1,1 +1,1 @@
-This forlder contains the files related to the Knowledge section of teh course.
+This folder contains the files related to the Knowledge section of teh course.
