--- a/Knowledge/README.ME
+++ b/Knowledge/README.ME
@@ -1,1 +1,3 @@
 This folder contains the files related to the Knowledge section of the course.
+
+logic.py and puzzle.py is project files for project knights
