--- a/Knowledge/README.ME
+++ b/Knowledge/README.ME
@@ -1,3 +1,5 @@
 This folder contains the files related to the Knowledge section of the course.
 
-logic.py and puzzle.py is project files for project knights
+logic.py and puzzle.py are project files for project knights
+
+mineweeper.py and runner.py are project files for minesweeper project.
